# hray

./: .gitignore  3.ppm  Dockerfile  README.md  hray.cabal  hray.eventlog  test.ppm  vogue
app/: Main.hs
src/: Canvas.hs  Colour.hs  Math.hs  Ray.hs  Scene.hs  Sphere.hs
src/Math/: Matrix.hs  Vector.hs
test/: CanvasSpec.hs  ColourSpec.hs  MathSpec.hs  RaySpec.hs  SceneSpec.hs  SphereSpec.hs
test/Math/: MathSpec.hs  MatrixSpec.hs  VectorSpec.hs
