name:                hray
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hray#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Canvas 
                     , Colour
                     , Math
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , lens
                     , linear
  default-language:    Haskell2010

executable hray
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , hray
                     , linear
  default-language:    Haskell2010

test-suite hray-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hray
                     , lens
                     , linear
                     , hspec
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CanvasSpec  
                     , ColourSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hray
